# SEFSOR

./: CMakeLists.txt  main.cpp
res/shaders/: Basic.shader
